--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -1,2 +1,3 @@
 // Variables
 $main-color: #29abe2;
+$website-width: 1280px;
