--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -4,3 +4,10 @@
     background: black;
     margin: 22px auto;
 }
+
+.container {
+	max-width: $website-width;
+	padding: 0 1.5rem;
+	margin: auto;
+	overflow: hidden;
+}
